# microservices/user_svc/src/user_svc/models/__init__.py
@@ -1,0 +1,9 @@
+# coding: utf-8
+
+# flake8: noqa
+from __future__ import absolute_import
+# import models into model package
+from user_svc.models.achievement import Achievement
+from user_svc.models.high_score import HighScore
+from user_svc.models.user import User
+from user_svc.models.user_detail import UserDetail
