# microservices/user_svc/src/user_svc/models/user_detail.py
@@ -1,0 +1,221 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from user_svc.models.base_model_ import Model
+from user_svc.models.achievement import Achievement  # noqa: F401,E501
+from user_svc.models.high_score import HighScore  # noqa: F401,E501
+from user_svc.models.user import User  # noqa: F401,E501
+from user_svc import util
+
+
+class UserDetail(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, username: str=None, email: str=None, password_hash: str=None, created: int=None, last_updated: int=None, achievements: List[Achievement]=None, high_scores: List[HighScore]=None):  # noqa: E501
+        """UserDetail - a model defined in Swagger
+
+        :param username: The username of this UserDetail.  # noqa: E501
+        :type username: str
+        :param email: The email of this UserDetail.  # noqa: E501
+        :type email: str
+        :param password_hash: The password_hash of this UserDetail.  # noqa: E501
+        :type password_hash: str
+        :param created: The created of this UserDetail.  # noqa: E501
+        :type created: int
+        :param last_updated: The last_updated of this UserDetail.  # noqa: E501
+        :type last_updated: int
+        :param achievements: The achievements of this UserDetail.  # noqa: E501
+        :type achievements: List[Achievement]
+        :param high_scores: The high_scores of this UserDetail.  # noqa: E501
+        :type high_scores: List[HighScore]
+        """
+        self.swagger_types = {
+            'username': str,
+            'email': str,
+            'password_hash': str,
+            'created': int,
+            'last_updated': int,
+            'achievements': List[Achievement],
+            'high_scores': List[HighScore]
+        }
+
+        self.attribute_map = {
+            'username': 'username',
+            'email': 'email',
+            'password_hash': 'password_hash',
+            'created': 'created',
+            'last_updated': 'last_updated',
+            'achievements': 'achievements',
+            'high_scores': 'high_scores'
+        }
+        self._username = username
+        self._email = email
+        self._password_hash = password_hash
+        self._created = created
+        self._last_updated = last_updated
+        self._achievements = achievements
+        self._high_scores = high_scores
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'UserDetail':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The UserDetail of this UserDetail.  # noqa: E501
+        :rtype: UserDetail
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def username(self) -> str:
+        """Gets the username of this UserDetail.
+
+
+        :return: The username of this UserDetail.
+        :rtype: str
+        """
+        return self._username
+
+    @username.setter
+    def username(self, username: str):
+        """Sets the username of this UserDetail.
+
+
+        :param username: The username of this UserDetail.
+        :type username: str
+        """
+
+        self._username = username
+
+    @property
+    def email(self) -> str:
+        """Gets the email of this UserDetail.
+
+
+        :return: The email of this UserDetail.
+        :rtype: str
+        """
+        return self._email
+
+    @email.setter
+    def email(self, email: str):
+        """Sets the email of this UserDetail.
+
+
+        :param email: The email of this UserDetail.
+        :type email: str
+        """
+
+        self._email = email
+
+    @property
+    def password_hash(self) -> str:
+        """Gets the password_hash of this UserDetail.
+
+
+        :return: The password_hash of this UserDetail.
+        :rtype: str
+        """
+        return self._password_hash
+
+    @password_hash.setter
+    def password_hash(self, password_hash: str):
+        """Sets the password_hash of this UserDetail.
+
+
+        :param password_hash: The password_hash of this UserDetail.
+        :type password_hash: str
+        """
+
+        self._password_hash = password_hash
+
+    @property
+    def created(self) -> int:
+        """Gets the created of this UserDetail.
+
+
+        :return: The created of this UserDetail.
+        :rtype: int
+        """
+        return self._created
+
+    @created.setter
+    def created(self, created: int):
+        """Sets the created of this UserDetail.
+
+
+        :param created: The created of this UserDetail.
+        :type created: int
+        """
+
+        self._created = created
+
+    @property
+    def last_updated(self) -> int:
+        """Gets the last_updated of this UserDetail.
+
+
+        :return: The last_updated of this UserDetail.
+        :rtype: int
+        """
+        return self._last_updated
+
+    @last_updated.setter
+    def last_updated(self, last_updated: int):
+        """Sets the last_updated of this UserDetail.
+
+
+        :param last_updated: The last_updated of this UserDetail.
+        :type last_updated: int
+        """
+
+        self._last_updated = last_updated
+
+    @property
+    def achievements(self) -> List[Achievement]:
+        """Gets the achievements of this UserDetail.
+
+
+        :return: The achievements of this UserDetail.
+        :rtype: List[Achievement]
+        """
+        return self._achievements
+
+    @achievements.setter
+    def achievements(self, achievements: List[Achievement]):
+        """Sets the achievements of this UserDetail.
+
+
+        :param achievements: The achievements of this UserDetail.
+        :type achievements: List[Achievement]
+        """
+
+        self._achievements = achievements
+
+    @property
+    def high_scores(self) -> List[HighScore]:
+        """Gets the high_scores of this UserDetail.
+
+
+        :return: The high_scores of this UserDetail.
+        :rtype: List[HighScore]
+        """
+        return self._high_scores
+
+    @high_scores.setter
+    def high_scores(self, high_scores: List[HighScore]):
+        """Sets the high_scores of this UserDetail.
+
+
+        :param high_scores: The high_scores of this UserDetail.
+        :type high_scores: List[HighScore]
+        """
+
+        self._high_scores = high_scores
